test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/incomplete_arg_funcall.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[28]:
  struct
  identifier(s)
  ;
  void
  identifier(f)
  (
  struct
  identifier(s)
  identifier(param)
  )
  ;
  extern
  struct
  identifier(s)
  identifier(extern_var)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  identifier(f)
  (
  identifier(extern_var)
  )
  ;
  }
